# pydantic-ai-mlx

./: .gitignore  README.md  pyproject.toml
src/pydantic_ai_lm_studio/: model.py
src/pydantic_ai_mlx_lm/: __init__.py  agent_model.py  generator.py  model.py  models.py  response.py
tests/: conftest.py  test_mlx_lm.py  test_models.py
tests/lm_studio/: conftest.py  test_model.py
