[project]
name = "pydantic-ai-mlx"
version = "0.2.2"
description = "Run MLX compatible HuggingFace models with Pydantic AI locally"
readme = "README.md"
authors = [{ name = "Doruk Gezici", email = "doruk@gezici.me" }]
requires-python = ">=3.12"
dependencies = ["mlx-lm>=0.21.1", "openai>=1.60.2", "pydantic-ai-slim>=0.0.20"]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "inline-snapshot>=0.19.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_lm_studio", "src/pydantic_ai_mlx_lm"]

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"
